# qml-template

./: .gitignore  CMakeLists.txt  README.md
CMake/: base.cmake  settings.cmake
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  resources.qrc  sources.cmake
src/qml/: app.qml  main.qml
